# EasyPlotter

./: CMakeLists.txt  EasyGraph.vcxproj  EasyGraph.vcxproj.filters  EasyPlotter.cpp  EasyPlotter.sln  LICENSE  README.md  Serilization.cpp  Serilization.h  UseImGui.cpp  UseImGui.h
Graph/: Graph.cpp  Graph.h  GraphContainer.cpp  GraphContainer.h  Plot.cpp  Plot.h  PlotContainer.cpp  PlotContainer.h  Plotter.cpp  Plotter.h
Graph/GraphTypes/: CalculatedFunction.cpp  CalculatedFunction.h  ChirpSignal.cpp  ChirpSignal.h  Constant.cpp  Constant.h  Cosine.cpp  Cosine.h  ExponentialFunction.cpp  ExponentialFunction.h  GaussianFunction.cpp  GaussianFunction.h  Graph.cpp  Graph.h  ImpulseSignal.cpp  ImpulseSignal.h  MathFunction.cpp  MathFunction.h  PulseTrain.cpp  PulseTrain.h  RectangularFunction.cpp  RectangularFunction.h  SawtoothWave.cpp  SawtoothWave.h  SquareWawe.cpp  SquareWawe.h  TriangularFunction.cpp  TriangularFunction.h  TriangularWave.cpp  TriangularWave.h  UniformNoise.cpp  UniformNoise.h  WhiteNoise.cpp  WhiteNoise.h
exprtk/: exprtk.hpp
